:tada: 解决升级底层组件后产生的兼容性问题