@@ -27,7 +27,6 @@ import org.springframework.util.StringUtils;
 
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * 项目启动器，搞定环境变量问题
@@ -88,9 +87,9 @@ public class BladeApplication {
 			// 同时存在dev、test、prod环境时
 			throw new RuntimeException("同时存在环境变量:[" + StringUtils.arrayToCommaDelimitedString(activeProfiles) + "]");
 		}
-		String startJarPath = BladeApplication.class.getResource("/").getPath().split("!")[0];
+		String startJarPath = Objects.requireNonNull(BladeApplication.class.getResource("/")).getPath().split("!")[0];
 		String activePros = joinFun.apply(activeProfileList.toArray());
-		System.out.println(String.format("----启动中，读取到的环境变量:[%s]，jar地址:[%s]----", activePros, startJarPath));
+		System.out.printf("----启动中，读取到的环境变量:[%s]，jar地址:[%s]----%n", activePros, startJarPath);
 		Properties props = System.getProperties();
 		props.setProperty("spring.application.name", appName);
 		props.setProperty("spring.profiles.active", profile);
@@ -102,15 +101,15 @@ public class BladeApplication {
 		props.setProperty("blade.dev-mode", profile.equals(AppConstant.PROD_CODE) ? "false" : "true");
 		props.setProperty("blade.service.version", AppConstant.APPLICATION_VERSION);
 		props.setProperty("spring.main.allow-bean-definition-overriding", "true");
-		props.setProperty("spring.cloud.nacos.config.prefix", NacosConstant.NACOS_CONFIG_PREFIX);
-		props.setProperty("spring.cloud.nacos.config.file-extension", NacosConstant.NACOS_CONFIG_FORMAT);
 		props.setProperty("spring.cloud.sentinel.transport.dashboard", SentinelConstant.SENTINEL_ADDR);
 		props.setProperty("spring.cloud.alibaba.seata.tx-service-group", appName.concat(NacosConstant.NACOS_GROUP_SUFFIX));
+		props.setProperty("spring.config.import", String.join(",", NacosConstant.dataId(), NacosConstant.dataId(profile), NacosConstant.dataId(appName, profile)));
+		props.setProperty("nacos.logging.default.config.enabled", "false");
 		// 加载自定义组件
 		List<LauncherService> launcherList = new ArrayList<>();
 		ServiceLoader.load(LauncherService.class).forEach(launcherList::add);
 		SpringApplicationBuilder finalBuilder = builder;
-		launcherList.stream().sorted(Comparator.comparing(LauncherService::getOrder)).collect(Collectors.toList())
+		launcherList.stream().sorted(Comparator.comparing(LauncherService::getOrder)).toList()
 			.forEach(launcherService -> launcherService.launcher(finalBuilder, appName, profile));
 		return finalBuilder;
 	}
@@ -122,7 +121,7 @@ public class BladeApplication {
 	 */
 	public static boolean isLocalDev() {
 		String osName = System.getProperty("os.name");
-		return StringUtils.hasText(osName) && !(AppConstant.OS_NAME_LINUX.equals(osName.toUpperCase()));
+		return StringUtils.hasText(osName) && !(AppConstant.OS_NAME_LINUX.equalsIgnoreCase(osName));
 	}
 
 }
